# sales_pilot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  full.css  package-lock.json  package.json
apps/api/: .env.example  AUTHENTICATION.md  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a15274bf6fc9_initial_schema.py  a2c71a69f650_add_lead_tags_junction_table.py  a8e1f4c9d2b6_message_external_id_unique_index.py  b1d5e8f3a7c2_reports_permission_backfill.py  b7f3e91a2c4d_organization_profile_fields.py  c4a8e2f19b3d_lead_management_fields.py  d3f8a2c91e5b_company_module_fields.py  e7c2a4f6b8d1_email_sending_fields.py  f3d9c6a2b7e4_email_tracking_fields.py
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  base.py  email_agent.py  generic_agent.py  reply_agent.py  research_agent.py
apps/api/app/auth/: cookies.py  dependencies.py
apps/api/app/core/: asyncio_compat.py  config.py  redis.py  utils.py
apps/api/app/database/: session.py
apps/api/app/exceptions/: __init__.py  errors.py  handlers.py
apps/api/app/models/: ARCHITECTURE.md  ERD.md  MIGRATIONS.md  POSTGRESQL_OPTIMIZATION.md  __init__.py  base.py  enums.py  remaining_domains.py  role.py
apps/api/app/repositories/: README.md  activity_repository.py  ai_agent_repository.py  ai_job_repository.py  ai_output_repository.py  attachment_repository.py  audit_log_repository.py  calendar_event_repository.py  campaign_lead_repository.py  campaign_repository.py  lead_repository.py  (+26 more)
apps/api/salespilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+582 files in other folders)
