[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "salespilot-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29", "psycopg[binary]>=3.1", "alembic>=1.13", "pydantic-settings>=2.4", "python-jose[cryptography]>=3.3", "passlib[bcrypt]>=1.7", "bcrypt<4.1", "email-validator>=2.2", "structlog>=24.4", "redis>=5.0,<6.0", "celery>=5.4", "user-agents>=2.2", "python-multipart>=0.0.9", "Pillow>=10.4", "jinja2>=3.1", "cryptography>=42.0", "openai>=1.40", "anthropic>=0.34", "groq>=0.11", "google-genai>=1.0", "ollama>=0.4", "httpx>=0.27", "beautifulsoup4>=4.12", "google-auth-oauthlib>=1.2", "google-api-python-client>=2.140"]
[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]
[tool.setuptools.packages.find]
include = ["app*"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["app/tests"]
[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
